<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidIPC</string>
    <string name="take_picture">拍照</string>
    <string name="record">录像</string>
    <string name="stop">停止</string>
    <string name="login">登录</string>
    <string name="startLogin">登录到 gk969.com</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="switchCam">切换镜头</string>
    <string name="rotationCam">旋转镜头</string>
    <string name="slowExpose">慢门拍照</string>
    <string name="exposeTime">曝光时间</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="stopSlowExpose">停止曝光</string>

</resources>
