<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:background="#606060"
    tools:context=".MainActivityIPC" >

    <FrameLayout
        android:id="@+id/frameViewCam"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" />
    
    <TextView
        android:id="@+id/tvFps"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#F00" />

    <TextView
        android:id="@+id/tvIp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvFps"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#F00" />
    
    <Button
        android:id="@+id/buttonTakePic"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/take_picture" />
    
    <Button
        android:id="@+id/buttonRec"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:text="@string/record" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonTakePic"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textViewMainLoginMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="#F00"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
